# jmraid

debian/: changelog  control  copyright  rules  watch
lib/inc/: disk.h  types.h
lib/src/: disk.c  jmraid.c
project/jmraidinfo/: CMakeLists.txt
project/jmraidinfo/project - vs2017/: jmraidinfo.vcxproj  jmraidinfo.vcxproj.filters
project/jmraidinfo/src/: main.c
